Add basic form functionality

--- a/src/css/Calendar.css
+++ b/src/css/Calendar.css
@@ -1,6 +1,7 @@
 #Calendar{
-    margin-top: -43px;
-    padding-left: 50%;
+    margin-top: -150px;
+    margin-left: 50%;
+    padding-right: 3%;
 }
 
 .fc .fc-day-today {
