--- a/src/css/Calendar.css
+++ b/src/css/Calendar.css
@@ -7,3 +7,18 @@
 .fc .fc-day-today {
     background-color: transparent !important;
   }
+
+  #calendarNavBar {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    height: 50px;
+    background-color: rgb(33, 33, 34);
+    border-radius: 30px;
+    margin-bottom: 10px;
+}
+
+#calPrev, #calNext {
+    margin: 0 1%; 
+    max-height: 40px;
+}
