--- a/src/css/Calendar.css
+++ b/src/css/Calendar.css
@@ -11,7 +11,6 @@
     justify-content: center;
     align-items: center;
     height: 50px;
-    background-color: rgb(33, 33, 34);
     border-radius: 30px;
     margin-bottom: 10px;
 }
@@ -20,4 +19,9 @@
 #calNext {
     margin: 0 1%;
     max-height: 40px;
+}
+
+.fc-col-header-cell-cushion {
+    text-decoration: none;
+
 }
